--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Teko&display=swap");
 
-body {
+* {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+body,
+html {
   margin: 0;
   font-family: "Bebas Neue", cursive, "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
 }
 
+form,
+.form-control,
+.form-label {
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+
+hr {
+  color: black !important;
+  background-color: black;
+  font-weight: bold;
+  height: 100px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -36,8 +61,4 @@ code {
 
 .bg-darky {
   background-color: #4d4d4d !important;
-}
-
-input {
-  font-size: 1.5rem !important;
 }
