--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ html {
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100%;
+  min-height: 100vh;
 }
 
 form,
