--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,12 @@ button.btn {
 .bg-darky {
   background-color: #4d4d4d !important;
 }
+
+.app-sections {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.5rem;
+  align-items: stretch;
+  background-color: #f5ad42;
+}
