--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@
 
 body,
 html {
-  margin: 0;
   font-family: "Bebas Neue", cursive, "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -26,6 +25,9 @@ code {
 
 button.btn {
   border-radius: 0;
+  box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
+  -webkit-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
+  -moz-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
 }
 
 .imgCard {
@@ -33,30 +35,55 @@ button.btn {
   height: 210px;
 }
 
-.container,
-.container-fluid,
-.container-lg,
-.container-md,
-.container-sm,
-.container-xl,
-.container-xxl {
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
 .cardGroup {
   background-color: inherit;
 }
 
 .bg-darky {
-  background-color: #4d4d4d !important;
+  background-color: #4d4d4d;
 }
 
 .app-sections {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   text-align: center;
   font-size: 1.5rem;
-  align-items: stretch;
+  align-items: center;
   background-color: #f5ad42;
+  width: 100%;
+}
+
+.app-sections > * {
+  margin: 0 auto;
+}
+
+.titulo-app {
+  margin: 1rem;
+  padding: 0.5rem;
+  color: #ffffff;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00;
+  font-size: 4rem;
+}
+
+.list-powerstats {
+  color: #ffffff;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00;
+}
+.con-powerstats {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: #4d4d4d;
+  box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
+  -webkit-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
+  -moz-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
+}
+
+.img-powerstats {
+  width: 100%;
 }
