--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ button.btn {
   box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
   -webkit-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
   -moz-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
+  font-size: 1.2rem;
+  width: 100%;
 }
 
 .imgCard {
@@ -50,8 +52,9 @@ button.btn {
   text-align: center;
   font-size: 1.5rem;
   align-items: center;
-  background-color: #f5ad42;
+  background-color: #ffae17;
   width: 100%;
+  padding-bottom: 1rem;
 }
 
 .app-sections > * {
@@ -67,11 +70,6 @@ button.btn {
   font-size: 4rem;
 }
 
-.list-powerstats {
-  color: #ffffff;
-  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
-    0 -18px 40px #f00;
-}
 .con-powerstats {
   display: flex;
   justify-content: center;
@@ -82,8 +80,67 @@ button.btn {
   box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
   -webkit-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
   -moz-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.79);
+  padding-bottom: 2rem;
+  border-bottom: 3px solid #b26a00;
 }
 
 .img-powerstats {
   width: 100%;
+  border: 2px solid #bdbdbd;
+}
+
+.powerstats-box-shadow {
+  background: #3d3d3d;
+  border: solid #bdbdbd 0.2rem;
+  box-shadow: 0 0 1rem rgba(255, 255, 255, 0.5) inset;
+  -webkit-box-shadow: 0 0 41px rgba(255, 255, 255, 0.5) inset;
+  -moz-box-shadow: 0 0 41px rgba(255, 255, 255, 0.5) inset;
+}
+
+.list-powerstats {
+  color: #ffffff;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00;
+}
+
+.powerstats-text {
+  font-size: 1.2rem;
+  font-family: "Bebas Neue", cursive, "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  text-shadow: none;
+}
+
+label.label-img {
+  font-family: "teko";
+  box-shadow: -10px -10px #b26a00;
+  background-color: #ff9800;
+  padding: 0.5rem;
+  color: #fff;
+  border: 1px solid #b26a00;
+  border-radius: 10px;
+  margin: 2rem;
+  font-size: calc(1em + 1vw);
+}
+
+.alert-danger {
+  font-size: 1.2rem;
+  margin: 0.5rem;
+}
+
+button.btn-buscar-heroe {
+  margin: 2rem;
+  width: 20%;
+  font-family: "teko";
+  font-size: calc(1em);
+}
+
+button.btn-dark:hover {
+  background-color: #4d4d4d;
+}
+
+.carta-heroe {
+  width: 10rem;
+
+  font-size: 1rem;
+  font-family: "Bebas Neue";
 }
